--- a/stylesheet/style.scss
+++ b/stylesheet/style.scss
@@ -1,4 +1,4 @@
-// GOOGLE FONTS
+/*// GOOGLE FONTS
 @import url("https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap");
 // VARIABLES
 // Colors
@@ -222,3 +222,4 @@ body {
     }
   }
 }
+*/
