--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -30,13 +30,18 @@ fieldset {
   border: none;
 }
 
-fieldset > input {
+.box {
+  display: flex;
+  justify-content: space-between;
+}
+
+.box > input {
   opacity: 0;
   position: fixed;
   width: 0;
 }
 
-fieldset > label {
+.box > label {
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -49,15 +54,183 @@ fieldset > label {
   height: 2.7em;
   cursor: pointer;
 }
+@media screen and (min-width: 1024px) {
+  .box > label {
+    width: 3.2em;
+    height: 3.2em;
+  }
+}
 
-fieldset > label:hover {
+.box > label:hover {
   background-color: #fb7413;
   color: #ffffff;
 }
 
-fieldset > input:checked + label {
+.box > input:checked + label {
   background-color: #959eac;
   color: #ffffff;
+}
+
+body {
+  display: grid;
+  place-items: center;
+  font-family: "Overpass", sans-serif;
+  background-color: #121417;
+}
+
+main {
+  position: relative;
+}
+
+h1,
+h2 {
+  color: #ffffff;
+  font-weight: 400;
+  font-size: 1.375rem;
+}
+@media screen and (min-width: 1024px) {
+  h1,
+h2 {
+    font-size: 1.75rem;
+  }
+}
+
+p {
+  color: #959eac;
+  font-size: 0.938rem;
+  line-height: 1.6;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+}
+footer .attribution {
+  color: #959eac;
+}
+footer .attribution a {
+  color: #ffffff;
+}
+
+.card_container {
+  background: linear-gradient(#1e252f, #161b22);
+  max-width: 21.5rem;
+  border-radius: 15px;
+  padding: 1.5rem 1.5rem 1.8rem;
+}
+@media screen and (min-width: 1024px) {
+  .card_container {
+    max-width: 25.75rem;
+    border-radius: 30px;
+    padding: 2rem 2rem 2.3rem;
+  }
+}
+
+.card_icon {
+  background-color: #252d37;
+  display: inline-block;
+  border-radius: 50%;
+  width: 2.5rem;
+  height: 2.5rem;
+  display: grid;
+  place-items: center;
+  margin-bottom: 1.125rem;
+}
+@media screen and (min-width: 1024px) {
+  .card_icon {
+    width: 3rem;
+    height: 3rem;
+    margin-bottom: 2rem;
+  }
+}
+.card_icon .star_icon {
+  width: 0.938rem;
+}
+
+.card_form_title {
+  margin-bottom: 0.938rem;
+}
+@media screen and (min-width: 1024px) {
+  .card_form_title {
+    margin-bottom: 0.5rem;
+  }
+}
+
+fieldset {
+  margin-top: 1.75rem;
+  display: flex;
+  flex-direction: column;
+}
+
+button {
+  background-color: #fb7413;
+  border: none;
+  padding: 1.1em;
+  border-radius: 30px;
+  color: #ffffff;
+  text-transform: uppercase;
+  letter-spacing: 0.125rem;
+  font-weight: 700;
+  width: 100%;
+  margin-top: 1.5rem;
+  cursor: pointer;
+}
+@media screen and (min-width: 1024px) {
+  button {
+    margin-top: 2rem;
+  }
+}
+button:hover {
+  background-color: #ffffff;
+  color: #fb7413;
+  transition: all 0.5s ease;
+}
+
+.card_form_message {
+  text-align: center;
+}
+.card_form_message .card_form_message_image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0.7rem;
+  max-width: 8.75rem;
+}
+@media screen and (min-width: 1024px) {
+  .card_form_message .card_form_message_image {
+    margin-top: 1.25rem;
+    max-width: 10.313rem;
+  }
+}
+.card_form_message .card_form_result {
+  color: #fb7413;
+  background-color: #252d37;
+  border-radius: 30px;
+  max-width: 10.625rem;
+  padding: 0.3em 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1.563rem;
+  margin-bottom: 1.875rem;
+  font-size: 0.875rem;
+}
+@media screen and (min-width: 1024px) {
+  .card_form_message .card_form_result {
+    padding: 0.2em 0.5em;
+    margin-top: 2.063rem;
+    max-width: 12.188rem;
+    font-size: 1rem;
+  }
+}
+.card_form_message .card_form_message_text {
+  margin-top: 1rem;
+  margin-bottom: 0.813rem;
+}
+@media screen and (min-width: 1024px) {
+  .card_form_message .card_form_message_text {
+    margin-bottom: 0.625rem;
+    max-width: 21.25rem;
+  }
 }
 
 /*
