--- a/stylesheet/style.scss
+++ b/stylesheet/style.scss
@@ -54,18 +54,21 @@ ul {
 fieldset {
   border: none;
 }
-/////// When I use these customizations for the radio-buttons the functionality does not work anymore. See below:
 
 // CUSTOMIZE RADIO BUTTONS
 // Hide radio-buttons
-fieldset > input {
+.box {
+  display: flex;
+  justify-content: space-between;
+}
+.box > input {
   opacity: 0;
   position: fixed;
   width: 0;
 }
 
 // Customization labels into buttons
-fieldset > label {
+.box > label {
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -77,17 +80,168 @@ fieldset > label {
   width: 2.7em;
   height: 2.7em;
   cursor: pointer;
+  @media screen and (min-width: $desktop) {
+    width: 3.2em;
+    height: 3.2em;
+  }
 }
 
-fieldset > label:hover {
+.box > label:hover {
   background-color: $orange;
   color: $white;
 }
 
 // When radio-button is selected the color of the font and background changes
-fieldset > input:checked + label {
+.box > input:checked + label {
   background-color: $light_grey;
   color: $white;
+}
+
+// STYLES
+body {
+  display: grid;
+  place-items: center;
+  font-family: $ff;
+  background-color: $very_dark_blue;
+}
+
+main {
+  position: relative;
+}
+
+h1,
+h2 {
+  color: $white;
+  font-weight: $regular;
+  font-size: 1.375rem;
+  @media screen and (min-width: $desktop) {
+    font-size: 1.75rem;
+  }
+}
+
+p {
+  color: $light_grey;
+  font-size: $fs;
+  line-height: 1.6;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  .attribution {
+    color: $light_grey;
+    a {
+      color: $white;
+    }
+  }
+}
+
+.card_container {
+  background: linear-gradient(#1e252f, #161b22);
+  max-width: 21.5rem;
+  border-radius: 15px;
+  padding: 1.5rem 1.5rem 1.8rem;
+  @media screen and (min-width: $desktop) {
+    max-width: 25.75rem;
+    border-radius: 30px;
+    padding: 2rem 2rem 2.3rem;
+  }
+}
+
+.card_icon {
+  background-color: $dark_blue;
+  display: inline-block;
+  border-radius: 50%;
+  width: 2.5rem;
+  height: 2.5rem;
+  display: grid;
+  place-items: center;
+  margin-bottom: 1.125rem;
+  @media screen and (min-width: $desktop) {
+    width: 3rem;
+    height: 3rem;
+    margin-bottom: 2rem;
+  }
+  .star_icon {
+    width: 0.938rem;
+  }
+}
+
+.card_form_title {
+  margin-bottom: 0.938rem;
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 0.5rem;
+  }
+}
+
+fieldset {
+  margin-top: 1.75rem;
+  display: flex;
+  flex-direction: column;
+}
+
+button {
+  background-color: $orange;
+  border: none;
+  padding: 1.1em;
+  border-radius: 30px;
+  color: $white;
+  text-transform: uppercase;
+  letter-spacing: 0.125rem;
+  font-weight: $bold;
+  width: 100%;
+  margin-top: 1.5rem;
+  cursor: pointer;
+  @media screen and (min-width: $desktop) {
+    margin-top: 2rem;
+  }
+  &:hover {
+    background-color: $white;
+    color: $orange;
+    transition: all 0.5s ease;
+  }
+}
+
+.card_form_message {
+  text-align: center;
+  .card_form_message_image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0.7rem;
+    max-width: 8.75rem;
+    @media screen and (min-width: $desktop) {
+      margin-top: 1.25rem;
+      max-width: 10.313rem;
+    }
+  }
+
+  .card_form_result {
+    color: $orange;
+    background-color: $dark_blue;
+    border-radius: 30px;
+    max-width: 10.625rem;
+    padding: 0.3em 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1.563rem;
+    margin-bottom: 1.875rem;
+    font-size: 0.875rem;
+    @media screen and (min-width: $desktop) {
+      padding: 0.2em 0.5em;
+      margin-top: 2.063rem;
+      max-width: 12.188rem;
+      font-size: 1rem;
+    }
+  }
+  .card_form_message_text {
+    margin-top: 1rem;
+    margin-bottom: 0.813rem;
+    @media screen and (min-width: $desktop) {
+      margin-bottom: 0.625rem;
+      max-width: 21.25rem;
+    }
+  }
 }
 
 /*
